# web-serial-mux

./: .gitignore  CMakeLists.txt  LICENCES.md  README.md
cmake/: CMakeLists.txt  boost.cmake  cli.cmake  fmt.cmake  gtest.cmake  json.cmake
lib/: CMakeLists.txt
lib/contrib/: CMakeLists.txt
lib/contrib/md5/: CMakeLists.txt  LICENCE.md
lib/core/: CMakeLists.txt  LICENCE.md  README.md
lib/core/cmake/: ApplicationFixture.cmake  Doxygen.cmake  FindSphinx.cmake  Findpdflatex.cmake  PackageSources.cmake  apsncoreConfig.cmake.in
lib/core/cmake/resources/: Doxyfile.in  DoxygenLayout.xml  conf.py.in  custom.css  header.html  mermaid-md.sed
lib/core/cmake/resources/_static/css/: blockquote.css  custom.css  font.css
lib/core/docs/: CMakeLists.txt  index.rst
lib/core/include/apsn/: ansi.hpp  debug.hpp  error.hpp  fmt.hpp  lock.hpp  logging.hpp  result.hpp  utility.hpp
lib/core/include/apsn/detail/: lock.tpp  result.hpp
lib/core/src/: CMakeLists.txt  ansi.cpp  fmt.cpp  lock.cpp  logging.cpp  utility.cpp
lib/core/src/detail/: result.cpp
lib/core/test/: CMakeLists.txt  common.hpp  test_ansi.cpp  test_logging.cpp  test_result.cpp
lib/http/: CMakeLists.txt
lib/http/docs/: CMakeLists.txt  index.rst
lib/http/include/apsn/http/: handlers.hpp  headers.hpp  listener.hpp  middleware.hpp  request.hpp  response.hpp  router.hpp  server_traits.hpp  session.hpp  ssl.hpp  websocket.hpp
lib/http/include/apsn/http/detail/: handlers.tpp  listener.tpp  router.tpp  session.tpp  trie.hpp  websocket.tpp
lib/http/src/: handlers.cpp  headers.cpp  listener.cpp  middleware.cpp  ssl.cpp  websocket.cpp
lib/http/test/: CMakeLists.txt  test_request.cpp  test_traits.cpp
lib/webserial/: CMakeLists.txt
lib/webserial/include/: cli_handler.hpp  context.hpp  error.hpp  history.hpp  logo.hpp  port.hpp  serial.hpp  strings.hpp  utility.hpp
lib/webserial/include/cli/: base_state.hpp  control_state.hpp  serial_state.hpp
lib/webserial/src/: cli_handler.cpp  context.cpp  error.cpp  history.cpp  logo.cpp  port.cpp  serial.cpp  strings.cpp  utility.cpp
lib/webserial/src/cli/: base_state.cpp  control_state.cpp  serial_state.cpp
patches/: 0000-make-cli-open.patch
scripts/: CMakeLists.txt  ca.csr_template.ini.in  cert_config.json  generate_keys.sh  srv.csr_template.ini.in  srv.ext_template.ini.in
site/: .gitignore  CMakeLists.txt  package-lock.json  package.json  tsconfig.json  webpack.config.js
site/src/: _variables.scss  main.ts  styles.scss  terminal.scss
